// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsSimpleSubnetModule UT input changes should handle subnetName change 1`] = `
"+ subnet/main.tf
depends_on = [aws_route_table.rt-region-changed-subnet]
}

- subnet/main.tf
depends_on = [aws_route_table.rt-region-private-subnet]
}

+ subnet/main.tf
resource "aws_network_acl" "nacl-region-changed-subnet" {
  provider = aws.123-us-east-1
  subnet_ids = [aws_subnet.subnet-region-changed-subnet.id]
  vpc_id = var.vpc_region_VpcId
  ingress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
  egress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
}

- subnet/main.tf
resource "aws_network_acl" "nacl-region-private-subnet" {
  provider = aws.123-us-east-1
  subnet_ids = [aws_subnet.subnet-region-private-subnet.id]
  vpc_id = var.vpc_region_VpcId
  ingress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
  egress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
}

+ subnet/main.tf
resource "aws_route_table_association" "rt-region-changed-subnet_assoc" {
  provider = aws.123-us-east-1
  route_table_id = aws_route_table.rt-region-changed-subnet.id
  subnet_id = aws_subnet.subnet-region-changed-subnet.id

- subnet/main.tf
resource "aws_route_table_association" "rt-region-private-subnet_assoc" {
  provider = aws.123-us-east-1
  route_table_id = aws_route_table.rt-region-private-subnet.id
  subnet_id = aws_subnet.subnet-region-private-subnet.id

+ subnet/main.tf
resource "aws_route_table" "rt-region-changed-subnet" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

- subnet/main.tf
resource "aws_route_table" "rt-region-private-subnet" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

+ subnet/main.tf
resource "aws_subnet" "subnet-region-changed-subnet" {
  provider = aws.123-us-east-1
  availability_zone = "us-east-1a"
  cidr_block = "10.0.1.0/24"
  vpc_id = var.vpc_region_VpcId
}

- subnet/main.tf
resource "aws_subnet" "subnet-region-private-subnet" {
  provider = aws.123-us-east-1
  availability_zone = "us-east-1a"
  cidr_block = "10.0.1.0/24"
  vpc_id = var.vpc_region_VpcId
}

+ subnet/outputs.tf
output "nacl-region-changed-subnet-NetworkAclId" {
  value = aws_network_acl.nacl-region-changed-subnet.id
}

- subnet/outputs.tf
output "nacl-region-private-subnet-NetworkAclId" {
  value = aws_network_acl.nacl-region-private-subnet.id
}

+ subnet/outputs.tf
output "rt-region-changed-subnet-RouteTableId" {
  value = aws_route_table.rt-region-changed-subnet.id
}

+ subnet/outputs.tf
output "rt-region-changed-subnet-subnetAssociationId" {
  value = aws_route_table_association.rt-region-changed-subnet_assoc.id
}

- subnet/outputs.tf
output "rt-region-private-subnet-RouteTableId" {
  value = aws_route_table.rt-region-private-subnet.id
}

- subnet/outputs.tf
output "rt-region-private-subnet-subnetAssociationId" {
  value = aws_route_table_association.rt-region-private-subnet_assoc.id
}

+ subnet/outputs.tf
output "subnet-region-changed-subnet-SubnetArn" {
  value = aws_subnet.subnet-region-changed-subnet.arn
}

+ subnet/outputs.tf
output "subnet-region-changed-subnet-SubnetId" {
  value = aws_subnet.subnet-region-changed-subnet.id
}

- subnet/outputs.tf
output "subnet-region-private-subnet-SubnetArn" {
  value = aws_subnet.subnet-region-private-subnet.arn
}

- subnet/outputs.tf
output "subnet-region-private-subnet-SubnetId" {
  value = aws_subnet.subnet-region-private-subnet.id
}"
`;

exports[`AwsSimpleSubnetModule UT input changes should handle subnetOptions change 1`] = `
"~ subnet/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -5,3 +5,3 @@
    ingress {
-     action = "allow"
+     action = "deny"
      cidr_block = "10.0.1.0/24"
@@ -13,3 +13,3 @@
    egress {
-     action = "allow"
+     action = "deny"
      cidr_block = "10.0.1.0/24""
`;

exports[`AwsSimpleSubnetModule UT should CUD 1`] = `
"~ subnet/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -5,3 +5,3 @@
    ingress {
-     action = "allow"
+     action = "deny"
      cidr_block = "10.0.1.0/24"
@@ -13,3 +13,3 @@
    egress {
-     action = "allow"
+     action = "deny"
      cidr_block = "10.0.1.0/24""
`;

exports[`AwsSimpleSubnetModule UT should CUD 3`] = `
"+ subnet/main.tf
depends_on = [aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem]
}

+ subnet/main.tf
resource "aws_efs_mount_target" "efs-mount-region-private-subnet-test-filesystem" {
  provider = aws.123-us-east-1
  file_system_id = var.efs_region_test_filesystem_FileSystemId
  security_groups = [aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id]
  subnet_id = aws_subnet.subnet-region-private-subnet.id
}

+ subnet/main.tf
resource "aws_security_group" "sec-grp-efs-mount-region-private-subnet-test-filesystem" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

+ subnet/main.tf
resource "aws_vpc_security_group_ingress_rule" "sec-grp-efs-mount-region-private-subnet-test-filesystem_ingress_0" {
  provider = aws.123-us-east-1
  cidr_ipv4 = "10.0.1.0/24"
  description = "tcp 2049-2049 10.0.1.0/24"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id
  from_port = 2049
  to_port = 2049

+ subnet/outputs.tf
output "efs-mount-region-private-subnet-test-filesystem-MountTargetId" {
  value = aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.id
}

+ subnet/outputs.tf
output "efs-mount-region-private-subnet-test-filesystem-NetworkInterfaceId" {
  value = aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.network_interface_id
}

+ subnet/outputs.tf
output "sec-grp-efs-mount-region-private-subnet-test-filesystem-Arn" {
  value = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.arn
}

+ subnet/outputs.tf
output "sec-grp-efs-mount-region-private-subnet-test-filesystem-GroupId" {
  value = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id
}

~ subnet/terragrunt.hcl inputs = {
@@ -1,2 +1,3 @@
  inputs = {
+   efs_region_test_filesystem_FileSystemId = dependency.testModule.outputs["efs-region-test-filesystem-FileSystemId"]
    vpc_region_VpcId = dependency.testModule.outputs["vpc-region-VpcId"]

~ subnet/terragrunt.hcl mock_outputs = {
@@ -1,2 +1,3 @@
  mock_outputs = {
+     "efs-region-test-filesystem-FileSystemId" = "mock-efs-region-test-filesystem-FileSystemId"
      "vpc-region-VpcId" = "mock-vpc-region-VpcId"

+ subnet/variables.tf
variable "efs_region_test_filesystem_FileSystemId" {}"
`;

exports[`AwsSimpleSubnetModule UT should CUD 5`] = `
"- subnet/main.tf
depends_on = [aws_route_table.rt-region-private-subnet]
}

- subnet/main.tf
depends_on = [aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem]
}

- subnet/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

- subnet/main.tf
resource "aws_efs_mount_target" "efs-mount-region-private-subnet-test-filesystem" {
  provider = aws.123-us-east-1
  file_system_id = var.efs_region_test_filesystem_FileSystemId
  security_groups = [aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id]
  subnet_id = aws_subnet.subnet-region-private-subnet.id
}

- subnet/main.tf
resource "aws_network_acl" "nacl-region-private-subnet" {
  provider = aws.123-us-east-1
  subnet_ids = [aws_subnet.subnet-region-private-subnet.id]
  vpc_id = var.vpc_region_VpcId
  ingress {
    action = "deny"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
  egress {
    action = "deny"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
}

- subnet/main.tf
resource "aws_route_table_association" "rt-region-private-subnet_assoc" {
  provider = aws.123-us-east-1
  route_table_id = aws_route_table.rt-region-private-subnet.id
  subnet_id = aws_subnet.subnet-region-private-subnet.id

- subnet/main.tf
resource "aws_route_table" "rt-region-private-subnet" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

- subnet/main.tf
resource "aws_security_group" "sec-grp-efs-mount-region-private-subnet-test-filesystem" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

- subnet/main.tf
resource "aws_subnet" "subnet-region-private-subnet" {
  provider = aws.123-us-east-1
  availability_zone = "us-east-1a"
  cidr_block = "10.0.1.0/24"
  vpc_id = var.vpc_region_VpcId
}

- subnet/main.tf
resource "aws_vpc_security_group_ingress_rule" "sec-grp-efs-mount-region-private-subnet-test-filesystem_ingress_0" {
  provider = aws.123-us-east-1
  cidr_ipv4 = "10.0.1.0/24"
  description = "tcp 2049-2049 10.0.1.0/24"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id
  from_port = 2049
  to_port = 2049

- subnet/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- subnet/outputs.tf
output "efs-mount-region-private-subnet-test-filesystem-MountTargetId" {
  value = aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.id
}

- subnet/outputs.tf
output "efs-mount-region-private-subnet-test-filesystem-NetworkInterfaceId" {
  value = aws_efs_mount_target.efs-mount-region-private-subnet-test-filesystem.network_interface_id
}

- subnet/outputs.tf
output "nacl-region-private-subnet-NetworkAclId" {
  value = aws_network_acl.nacl-region-private-subnet.id
}

- subnet/outputs.tf
output "rt-region-private-subnet-RouteTableId" {
  value = aws_route_table.rt-region-private-subnet.id
}

- subnet/outputs.tf
output "rt-region-private-subnet-subnetAssociationId" {
  value = aws_route_table_association.rt-region-private-subnet_assoc.id
}

- subnet/outputs.tf
output "sec-grp-efs-mount-region-private-subnet-test-filesystem-Arn" {
  value = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.arn
}

- subnet/outputs.tf
output "sec-grp-efs-mount-region-private-subnet-test-filesystem-GroupId" {
  value = aws_security_group.sec-grp-efs-mount-region-private-subnet-test-filesystem.id
}

- subnet/outputs.tf
output "subnet-region-private-subnet-SubnetArn" {
  value = aws_subnet.subnet-region-private-subnet.arn
}

- subnet/outputs.tf
output "subnet-region-private-subnet-SubnetId" {
  value = aws_subnet.subnet-region-private-subnet.id
}

- subnet/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- subnet/terragrunt.hcl
inputs = {
  efs_region_test_filesystem_FileSystemId = dependency.testModule.outputs["efs-region-test-filesystem-FileSystemId"]
  vpc_region_VpcId = dependency.testModule.outputs["vpc-region-VpcId"]
}

- subnet/terragrunt.hcl
mock_outputs = {
    "efs-region-test-filesystem-FileSystemId" = "mock-efs-region-test-filesystem-FileSystemId"
    "vpc-region-VpcId" = "mock-vpc-region-VpcId"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- subnet/variables.tf
variable "efs_region_test_filesystem_FileSystemId" {}

- subnet/variables.tf
variable "vpc_region_VpcId" {}"
`;

exports[`AwsSimpleSubnetModule UT should CUD tags 1`] = `
"~ subnet/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -21,3 +21,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ subnet/main.tf resource "aws_route_table" "rt-region-private-subnet" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ subnet/main.tf resource "aws_subnet" "subnet-region-private-subnet" {
@@ -6,3 +6,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsSimpleSubnetModule UT should CUD tags 3`] = `
"~ subnet/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -20,6 +20,2 @@
    }
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ subnet/main.tf resource "aws_route_table" "rt-region-private-subnet" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region_VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ subnet/main.tf resource "aws_subnet" "subnet-region-private-subnet" {
@@ -5,6 +5,2 @@
    vpc_id = var.vpc_region_VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate private subnet with public subnet with a NAT Gateway 1`] = `
"~ subnet1/main.tf resource "aws_network_acl" "nacl-region-public-subnet" {
@@ -20,10 +20,2 @@
    }
-   ingress {
-     action = "allow"
-     cidr_block = "10.0.1.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 30
-     to_port = -1
-   }
    egress {
@@ -44,10 +36,2 @@
    }
-   egress {
-     action = "allow"
-     cidr_block = "10.0.1.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 30
-     to_port = -1
-   }
  }

~ subnet2/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -12,18 +12,2 @@
    }
-   ingress {
-     action = "allow"
-     cidr_block = "10.0.0.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 20
-     to_port = -1
-   }
-   ingress {
-     action = "allow"
-     cidr_block = "0.0.0.0/0"
-     from_port = 1024
-     protocol = "-1"
-     rule_no = 30
-     to_port = 65535
-   }
    egress {
@@ -36,18 +20,2 @@
    }
-   egress {
-     action = "allow"
-     cidr_block = "10.0.0.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 20
-     to_port = -1
-   }
-   egress {
-     action = "allow"
-     cidr_block = "0.0.0.0/0"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 30
-     to_port = -1
-   }
  }

~ subnet2/main.tf resource "aws_route_table" "rt-region-private-subnet" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region_VpcId
-   route {
-     cidr_block = "0.0.0.0/0"
-     nat_gateway_id = var.nat_gateway_region_public_subnet_NatGatewayId
-   }
  }

- subnet2/terragrunt.hcl
dependency "subnet1" {
  config_path = "../subnet1"

~ subnet2/terragrunt.hcl inputs = {
@@ -1,3 +1,2 @@
  inputs = {
-   nat_gateway_region_public_subnet_NatGatewayId = dependency.subnet1.outputs["nat-gateway-region-public-subnet-NatGatewayId"]
    vpc_region_VpcId = dependency.testModule.outputs["vpc-region-VpcId"]

- subnet2/variables.tf
variable "nat_gateway_region_public_subnet_NatGatewayId" {}"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate private subnet with public subnet with a NAT Gateway 3`] = `
"- subnet1/main.tf
depends_on = [aws_eip.nat-gateway-region-public-subnet_eip]
}

- subnet1/main.tf
resource "aws_eip" "nat-gateway-region-public-subnet_eip" {
  provider = aws.123-us-east-1
  domain = "vpc"
}

- subnet1/main.tf
resource "aws_nat_gateway" "nat-gateway-region-public-subnet" {
  provider = aws.123-us-east-1
  allocation_id = aws_eip.nat-gateway-region-public-subnet_eip.id
  connectivity_type = "public"
  subnet_id = aws_subnet.subnet-region-public-subnet.id

- subnet1/outputs.tf
output "nat-gateway-region-public-subnet-AllocationId" {
  value = aws_eip.nat-gateway-region-public-subnet_eip.id
}

- subnet1/outputs.tf
output "nat-gateway-region-public-subnet-NatGatewayId" {
  value = aws_nat_gateway.nat-gateway-region-public-subnet.id
}"
`;

exports[`AwsSimpleSubnetModule UT should associate and disassociate subnet with siblings 1`] = `
"~ subnet1/main.tf resource "aws_network_acl" "nacl-region-private-subnet" {
@@ -12,10 +12,2 @@
    }
-   ingress {
-     action = "allow"
-     cidr_block = "10.0.0.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 20
-     to_port = -1
-   }
    egress {
@@ -28,10 +20,2 @@
    }
-   egress {
-     action = "allow"
-     cidr_block = "10.0.0.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 20
-     to_port = -1
-   }
  }

~ subnet2/main.tf resource "aws_network_acl" "nacl-region-public-subnet" {
@@ -20,10 +20,2 @@
    }
-   ingress {
-     action = "allow"
-     cidr_block = "10.0.1.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 30
-     to_port = -1
-   }
    egress {
@@ -44,10 +36,2 @@
    }
-   egress {
-     action = "allow"
-     cidr_block = "10.0.1.0/24"
-     from_port = -1
-     protocol = "-1"
-     rule_no = 30
-     to_port = -1
-   }
  }"
`;

exports[`AwsSimpleSubnetModule UT should handle moduleId change 1`] = `
"- subnet-1/main.tf
depends_on = [aws_route_table.rt-region-private-subnet]
}

- subnet-1/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

- subnet-1/main.tf
resource "aws_network_acl" "nacl-region-private-subnet" {
  provider = aws.123-us-east-1
  subnet_ids = [aws_subnet.subnet-region-private-subnet.id]
  vpc_id = var.vpc_region_VpcId
  ingress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
  egress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
}

- subnet-1/main.tf
resource "aws_route_table_association" "rt-region-private-subnet_assoc" {
  provider = aws.123-us-east-1
  route_table_id = aws_route_table.rt-region-private-subnet.id
  subnet_id = aws_subnet.subnet-region-private-subnet.id

- subnet-1/main.tf
resource "aws_route_table" "rt-region-private-subnet" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

- subnet-1/main.tf
resource "aws_subnet" "subnet-region-private-subnet" {
  provider = aws.123-us-east-1
  availability_zone = "us-east-1a"
  cidr_block = "10.0.1.0/24"
  vpc_id = var.vpc_region_VpcId
}

- subnet-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- subnet-1/outputs.tf
output "nacl-region-private-subnet-NetworkAclId" {
  value = aws_network_acl.nacl-region-private-subnet.id
}

- subnet-1/outputs.tf
output "rt-region-private-subnet-RouteTableId" {
  value = aws_route_table.rt-region-private-subnet.id
}

- subnet-1/outputs.tf
output "rt-region-private-subnet-subnetAssociationId" {
  value = aws_route_table_association.rt-region-private-subnet_assoc.id
}

- subnet-1/outputs.tf
output "subnet-region-private-subnet-SubnetArn" {
  value = aws_subnet.subnet-region-private-subnet.arn
}

- subnet-1/outputs.tf
output "subnet-region-private-subnet-SubnetId" {
  value = aws_subnet.subnet-region-private-subnet.id
}

- subnet-1/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- subnet-1/terragrunt.hcl
inputs = {
  vpc_region_VpcId = dependency.testModule.outputs["vpc-region-VpcId"]
}

- subnet-1/terragrunt.hcl
mock_outputs = {
    "vpc-region-VpcId" = "mock-vpc-region-VpcId"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- subnet-1/variables.tf
variable "vpc_region_VpcId" {}

+ subnet-2/main.tf
depends_on = [aws_route_table.rt-region-private-subnet]
}

+ subnet-2/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

+ subnet-2/main.tf
resource "aws_network_acl" "nacl-region-private-subnet" {
  provider = aws.123-us-east-1
  subnet_ids = [aws_subnet.subnet-region-private-subnet.id]
  vpc_id = var.vpc_region_VpcId
  ingress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
  egress {
    action = "allow"
    cidr_block = "10.0.1.0/24"
    from_port = -1
    protocol = "-1"
    rule_no = 10
    to_port = -1
  }
}

+ subnet-2/main.tf
resource "aws_route_table_association" "rt-region-private-subnet_assoc" {
  provider = aws.123-us-east-1
  route_table_id = aws_route_table.rt-region-private-subnet.id
  subnet_id = aws_subnet.subnet-region-private-subnet.id

+ subnet-2/main.tf
resource "aws_route_table" "rt-region-private-subnet" {
  provider = aws.123-us-east-1
  vpc_id = var.vpc_region_VpcId
}

+ subnet-2/main.tf
resource "aws_subnet" "subnet-region-private-subnet" {
  provider = aws.123-us-east-1
  availability_zone = "us-east-1a"
  cidr_block = "10.0.1.0/24"
  vpc_id = var.vpc_region_VpcId
}

+ subnet-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ subnet-2/outputs.tf
output "nacl-region-private-subnet-NetworkAclId" {
  value = aws_network_acl.nacl-region-private-subnet.id
}

+ subnet-2/outputs.tf
output "rt-region-private-subnet-RouteTableId" {
  value = aws_route_table.rt-region-private-subnet.id
}

+ subnet-2/outputs.tf
output "rt-region-private-subnet-subnetAssociationId" {
  value = aws_route_table_association.rt-region-private-subnet_assoc.id
}

+ subnet-2/outputs.tf
output "subnet-region-private-subnet-SubnetArn" {
  value = aws_subnet.subnet-region-private-subnet.arn
}

+ subnet-2/outputs.tf
output "subnet-region-private-subnet-SubnetId" {
  value = aws_subnet.subnet-region-private-subnet.id
}

+ subnet-2/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

+ subnet-2/terragrunt.hcl
inputs = {
  vpc_region_VpcId = dependency.testModule.outputs["vpc-region-VpcId"]
}

+ subnet-2/terragrunt.hcl
mock_outputs = {
    "vpc-region-VpcId" = "mock-vpc-region-VpcId"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

+ subnet-2/variables.tf
variable "vpc_region_VpcId" {}"
`;
